<resources>
    <string name="app_name">KeyService</string>

    <string name="encrypt_message_hint">message</string>


    <string name="encrypt_button">Encrypt</string>
    <string name="decrypt_button">Decrypt</string>

    <string name="encrypt_info">with private key</string>
    <string name="decrypt_info">with public key</string>
    <string name="encrypt_result">encrypted text</string>
    <string name="decrypt_result">decrypted text</string>


</resources>
